--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xvue-ui",
   "description": "xvue-ui是一款基于vue.js开发的响应式前端框架",
-  "version": "1.3.48",
+  "version": "1.3.60",
   "author": "rohlin",
   "main": "dist/xvue-ui.js",
   "license": "MIT",
@@ -11,6 +11,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "date-fns": "^1.30.1",
     "vue": "^2.6.10"
   },
   "browserslist": [
